<?xml version="1.0"?>
<package>
  <name>LMS1xx</name>
  <version>0.0.0</version>
  <description>The LMS1xx package</description>

  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>

  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roscpp_serialization</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roscpp_serialization</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>
  </export>
</package>
