<?xml version="1.0"?>
<package format="3">
  <name>lms1xx</name>
  <version>1.0.1</version>
  <description>The lms1xx package contains a basic ROS 2 driver for the SICK LMS1xx line of LIDARs.</description>

  <author>Konrad Banachowicz</author>
  <author email="mpurvis@clearpathrobotics.com">Mike Purvis</author>
  <author email="shravansomashekara.rai@gmail.com">Shravan S Rai</author>
  <author email="samuel@dynorobotics.se">Samuel Lindgren</author>

  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>
  <url type="website">http://ros.org/wiki/LMS1xx</url>

  <license>LGPL</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>laser_geometry</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
